Fix amdgpu build in mpi-proxy-plugin

--- a/offload/plugins-nextgen/mpi/CMakeLists.txt
+++ b/offload/plugins-nextgen/mpi/CMakeLists.txt
@@ -114,6 +114,7 @@ llvm_update_compile_flags(llvm-offload-mpi-proxy-device)
 target_link_libraries(llvm-offload-mpi-proxy-device PRIVATE
   EventSystem
   LLVMSupport
+  LLVMFrontendOpenMP
   omp
 )
 
